# backuwup

./: .dockerignore  .env.docker  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rustfmt.toml
client/: Cargo.toml
client/src/: cli.rs  config.rs  defaults.rs  identity.rs  key_manager.rs  main.rs  packfile_receiver.rs  setup.rs
client/src/backup/: backup.rs  backup_orchestrator.rs  blob_index.rs  filesystem_walker.rs  mod.rs  orchestrator.rs  packfile_handler.rs  restore.rs  restore_orchestrator.rs  restore_send.rs  send.rs  walker.rs  walker2.rs
client/src/backup/filesystem/: dir_packer.rs  dir_unpacker.rs  file_utils.rs  mod.rs  package.rs  unpackage.rs
client/src/backup/filesystem/packfile/: blob_index.rs  mod.rs  pack.rs  unpack.rs
client/src/backup/packfile/: blob_index.rs  mod.rs  pack.rs  unpack.rs
client/src/config/: backup.rs  identity.rs  log.rs  mod.rs  peers.rs
client/src/net/: mod.rs  requests.rs
client/src/net_p2p/: handle_connections.rs  mod.rs  p2p_connection_manager.rs  receive.rs  received_files_writer.rs  restore_files_writer.rs  transport.rs
client/src/net_server/: mod.rs  requests.rs
client/src/ui/: cli.rs  logger.rs  mod.rs  ws.rs  ws_dispatcher.rs  ws_status_message.rs
client/static/: app.js  index.html  styles.css
client/static/lib/: vue.global.min.js  vue.global.prod.js
client/tests/: blob_index_tests.rs
docs/: book.toml
docs/src/: SUMMARY.md  client.md  server.md
server/: .env.example  Cargo.toml
server/src/: backup_request.rs  client_auth_manager.rs  db.rs  main.rs  ws.rs
server/src/handlers/: backup.rs  backup_request.rs  login.rs  mod.rs  p2p_connection_request.rs  register.rs  transport_request.rs
server/src/schema/: schema.sql
shared/: Cargo.toml
shared/src/: client_message.rs  constants.rs  lib.rs  p2p_message.rs  server_message.rs  server_message_ws.rs  types.rs
