[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.8.0"
console = "0.15.5"
dialoguer = "0.10.3"
indicatif = "0.17.3"
tokio = { version = "1.25.0", features = ["full"] }
