[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async runtime
tokio = { version = "1.25.0", features = ["full"] }
futures-util = "0.3.26"

# Networking
tokio-tungstenite = { version = "0.18.0", features = ["rustls-tls-native-roots"] }
reqwest = "0.11.14"

# UI
poem = { version = "1.3.55", features = ["embed", "websocket"] }
rust-embed = "6.4.2"

# Storage
sqlx = { version = "0.6", features = [ "sqlite" ] }

# Utils
anyhow = "1.0.69"
once_cell = "1.17.1"
dirs = "4.0.0"
async-trait = "0.1.64"
local-ip-address = "0.5.1"
