[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }

# Crypto
ed25519-dalek = "1.0.1"
rand_chacha = "0.3.1"
getrandom = "0.2.8"
sha2 = "0.10.6"

# Async runtime
tokio = { version = "1.25.0", features = ["full"] }
futures-util = "0.3.26"
futures = "0.3.26"

# Networking
tokio-tungstenite = { version = "0.18.0", features = ["rustls-tls-native-roots"] }
reqwest = { version = "0.11.14", features = ["tokio-rustls", "json"] }
portpicker = "0.1.1"
local-ip-address = "0.5.1"

# UI
poem = { version = "1.3.55", features = ["embed", "websocket"] }
rust-embed = { version = "6.4.2" }
bip39 = "2.0.0"
dialoguer = "0.10.3"
owo-colors = "3.5.0"

# Serialization
serde_json = "1.0.93"
bincode = "1.3.3"
serde = { version = "1.0.152", features = ["derive"] }

# Storage
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite"] }

# Data structures
delay_map = "0.3.0"

# Utils
anyhow = "1.0.69"
dirs = "4.0.0"
async-trait = "0.1.64"
hex = "0.4.3"
thiserror = "1.0.39"
