[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }

# Async runtime
tokio = { version = "1.25.0", features = ["full"] }
futures-util = "0.3.26"

# Networking
tokio-tungstenite = { version = "0.18.0", features = ["rustls-native-certs"] }
poem = { version = "1.3.55", features = ["websocket", "rustls"] }

# Database
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" , "postgres" ] }
dotenv = "0.15.0"
sum-queue = "1.0.0"

# Serialization
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
